<resources>
    <string name="app_name">FUEL DROP</string>
    <string name="title_activity_login_user">LoginActivityUser</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <string name="action_settings">Settings</string>
    <string name="create_bunk">CREATE BUNK</string>
    <string name="update_bunk">UPDATE BUNK</string>
    <string name="booking_status">BOOKING STATUS</string>

    <!-- Login page values -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forget your Password?</string>
    <string name="signup">SignUP</string>
    <string name="or">--OR--</string>
    <string name="login">Login</string>

    <!-- Values Related to Back4App -->
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">peROutvpqDlCgNdgiNetp9Hxbq7I0mrO9opwnyHX</string>
    <string name="back4app_client_key">Q7UfdIiC2thrVXAIWECSWESksiUCyJ5SKhi0wV0t</string>

    <!-- User registration details values -->
    <string name="label">REGISTRATION</string>
    <string name="name">Enter Name</string>
    <string name="address">Enter Address</string>
    <string name="phone">Enter Contact Number</string>
    <string name="email">Enter Email</string>
    <string name="cpassword">Confirm Password</string>
    <string name="location">Select bunk location</string>
    <string name="checkbox"> agree to terms and condtions</string>
    <string name="title_activity_register_map">Register_map</string>

    <!-- ADMIN HOME PAGE-->
    <string name="adminHome">HOME</string>
    <string name="adminLogout">LOGOUT</string>
    <string name="adminProfile">PROFILE</string>
    <string name="adminBunk">BUNK REQUESTS</string>

    <!-- USER HOME PAGE -->
    <string name="userHome">HOME</string>
    <string name="userLogout">LOGOUT</string>
    <string name="userProfile">PROFILE</string>
    <string name="userFuelOrder">ORDER FUEL</string>
    <string name="userStatus">CHECK STATUS</string>
    <string name="userHistory">ORDER HISTORY</string>

    <!-- Profile -->
    <string name="profileName">Name</string>
    <string name="profileEmail">Email</string>
    <string name="profileContact">Contact</string>
    <string name="profileUsername">Username</string>

    <!--BUNK HOME PAGE-->
    <string name="bunkHome">HOME</string>
    <string name="bunkLogout">LOGOUT</string>
    <string name="bunkProfile">PROFILE</string>
    <string name="bunkOrderRequest">ORDERS</string>
    <string name="bunkOrderHistory">HISTORY</string>
    <string name="bunkUpdate">UPDATES</string>


    <!-- Order Details Page -->
    <string name="orderHeading">ORDER DETAILS</string>
    <string name="orderID">Order ID</string>
    <string name="orderBunkName">Bunk Name</string>
    <string name="orderBunkContact">Bunk Contact</string>
    <string name="orderCustomerName">Customer Name</string>
    <string name="orderCustomerContact">Customer Contact</string>
    <string name="orderFuelType">Fuel Type</string>
    <string name="orderFuelQuantity">Quantity</string>
    <string name="orderFuelPrice">Price</string>
    <string name="orderTotal">Total Amount</string>
    <string name="orderButton">PLACE ORDER</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- string array for fuel type-->
    <string-array name="fuelType">
        <item>Petrol</item>
        <item>Diesel</item>
        <item>Petrol &amp; Diesel</item>
    </string-array>

    <!-- string array for fuel avaialability-->
    <string-array name="fuelAvailable">
        <item>Available</item>
        <item>UnAvailable</item>
        <item>Self Service</item>
    </string-array>

    <!-- Bunk Update Activity-->
    <string name="fuelType">Select Fuel Type</string>
    <string name="petrolPrice">Petrol Price</string>
    <string name="dieselPrice">Diesel Price</string>
    <string name="fuelAvail">Service Availability</string>
    <string name="updateButton">UPDATE</string>

    <!-- Bunk Request -->
    <string name="bunkRequestUpdate">UPDATE</string>
    <string name="bunkRequestReject">REJECT</string>
    <string name="bunkRequestStatus">Update Status</string>

    <!-- string array for bunk order updation-->
    <string-array name="bunkRequestUpdate">
        <item>Pending</item>
        <item>Accept</item>
        <item>Reject</item>
        <item>Delivered</item>
    </string-array>

    <!-- string array for admin bunk request update -->
    <string-array name="adminRequestUpdate">
        <item>Pending</item>
        <item>Acccept</item>
        <item>Reject</item>
    </string-array>

    <!-- order Details fuelType -->
    <string-array name="orderDetailsFuelType">
        <item>Petrol</item>
        <item>Diesel</item>
    </string-array>
    <string name="title_activity_maps_user">MapsActivityUser</string>
</resources>