<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_user"
    android:padding="30dp"
    android:orientation="vertical"
    android:background="@drawable/login">


    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="35sp"
        android:text="" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="160dp"
        android:textSize="15sp"
        android:textColor="@android:color/holo_blue_dark"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="15dp"
        android:textSize="24sp"
        android:background="@drawable/login_button_design"
        android:text="@string/login"
        android:textColor="#ffffff"/>

    <TextView
        android:id="@+id/option"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="230dp"
        android:textSize="18sp"
        android:textColor="#5283C0"/>

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="15dp"
        android:textSize="24sp"
        android:background="@drawable/login_button_design"
        android:textColor="#ffffff"
        android:text="@string/signup" />

</LinearLayout>