<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF0266"
    tools:context=".BunkUpdate">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.027">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_margin="10dp"
                android:fontFamily="serif"
                android:text="@string/bunkUpdate"
                android:textAlignment="center"
                android:textColor="@color/blueBlack"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fuelUpdateDate"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="80dp"
                android:background="@color/white"
                android:textColor="@color/blueBlack"
                android:textSize="30sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_marginTop="150dp">

                <AutoCompleteTextView
                    android:id="@+id/fuelTypeView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/fuelType"
                    android:textColor="@color/blueBlack"
                    android:textStyle="bold"
                    android:background="@color/white"
                    android:textSize="25sp"
                    android:inputType="none"
                    android:layout_weight="2" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="250dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fuelPetrolPrice"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="20sp"
                    android:hint="@string/petrolPrice"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="350dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fuelDeiselPrice"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="20sp"
                    android:hint="@string/dieselPrice"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_marginTop="450dp">

                <AutoCompleteTextView
                    android:id="@+id/fuelAvailableView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/fuelAvail"
                    android:textColor="@color/blueBlack"
                    android:textStyle="bold"
                    android:background="@color/white"
                    android:textSize="25sp"
                    android:inputType="none"
                    android:layout_weight="2" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fuelUpdateButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="550dp"
                android:layout_marginBottom="50dp"
                android:text="@string/updateButton"
                android:textSize="25sp"
                tools:ignore="InvalidId" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>