<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:id="@+id/reg_page"
    tools:ignore="InvalidId">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reg_page_layout"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/label"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@android:color/darker_gray"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:gravity="center_horizontal"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:textColorHint="@android:color/holo_purple">

                <EditText
                    android:id="@+id/reg_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_design"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/holo_purple"
                    tools:ignore="SpeakableTextPresentCheck"
                    android:importantForAutofill="no" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:textColorHint="@android:color/holo_purple">

                <EditText
                    android:id="@+id/reg_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_design"
                    android:hint="@string/phone"
                    android:inputType="number"
                    android:textColor="@android:color/holo_purple"
                    tools:ignore="SpeakableTextPresentCheck"
                    android:importantForAutofill="no" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:textColorHint="@android:color/holo_purple">

                <EditText
                    android:id="@+id/reg_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_design"
                    android:hint="@string/username"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/holo_purple"
                    tools:ignore="SpeakableTextPresentCheck"
                    android:importantForAutofill="no" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:textColorHint="@android:color/holo_purple">

                <EditText
                    android:id="@+id/reg_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_design"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@android:color/holo_purple"
                    tools:ignore="SpeakableTextPresentCheck"
                    android:importantForAutofill="no" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:textColorHint="@android:color/holo_purple">

                <EditText
                    android:id="@+id/reg_conf_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_design"
                    android:hint="@string/cpassword"
                    android:inputType="textPassword"
                    android:textColor="@android:color/holo_purple"
                    tools:ignore="SpeakableTextPresentCheck"
                    android:importantForAutofill="no" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:textColorHint="@android:color/holo_purple">

                <EditText
                    android:id="@+id/reg_map"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_design"
                    android:hint="Get your location"
                    android:inputType="text"
                    android:textColor="@android:color/holo_purple"
                    tools:ignore="SpeakableTextPresentCheck"
                    android:importantForAutofill="no" />
            </com.google.android.material.textfield.TextInputLayout>


            <CheckBox
                android:id="@+id/reg_chk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:text="@string/checkbox"
                android:textColor="@android:color/black"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/reg_signup"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/login_button_design"
                android:text="@string/signup"
                android:textColor="#D1C4E9"
                tools:ignore="TextContrastCheck"
                android:clickable="true" />


        </LinearLayout>
</ScrollView>